--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
@@ -8,7 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:minHeight="120dp">
 
         <RelativeLayout
             android:id="@+id/rlMainView"
@@ -19,6 +20,7 @@
             android:paddingStart="14dp"
             android:paddingTop="15dp"
             android:paddingEnd="14dp"
+            android:minHeight="120dp"
             android:paddingBottom="15dp">
 
             <ImageView
@@ -136,6 +138,7 @@
             android:id="@+id/rlAcceptView"
             android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:minHeight="120dp"
             android:layout_alignParentEnd="true"
             android:background="#ff5b29"
             android:visibility="gone">
