--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request.xml
@@ -13,8 +13,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tabDots"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabDots"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="@color/white"
+        android:paddingBottom="15dp"
+        android:tag="@string/dont_touch_me"
+        app:paddingEnd="4dp"
+        app:paddingStart="4dp"
+        app:tabBackground="@drawable/tab_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp"
+        app:tabMaxWidth="10dp" />
 
 </android.support.constraint.ConstraintLayout>
