--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:tag="@string/dont_touch_me"
-    android:padding="10dp"
     app:layout_constraintBottom_toBottomOf="parent"
     android:orientation="vertical">
 
@@ -14,15 +13,15 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-10dp"
-        android:layout_marginTop="-5dp"
-        android:layout_marginEnd="-10dp"
-        android:progress="50"
+        android:progress="100"
+        android:layout_marginTop="-6dp"
         android:progressTint="#7ed321" />
 
     <RelativeLayout
         android:id="@+id/llPickup"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -64,7 +63,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/llPickup"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/ic_dotted_path"
         android:minHeight="10dp" />
 
@@ -75,6 +75,8 @@
         android:textColor="@color/text_color"
         android:layout_gravity="start"
         android:layout_below="@+id/llPickup"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center">
 
         <ImageView
@@ -100,6 +102,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_below="@+id/llDrop">
 
         <TextView
@@ -128,6 +132,8 @@
         android:text="Accept this for 500"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="15dp"
         android:textAllCaps="false"
         android:background="@drawable/button_bg_gradient"/>
@@ -137,6 +143,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:textColor="@color/text_color"
         android:text="Offer you fare for trip"/>
 
@@ -145,6 +153,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
 
 
@@ -155,5 +165,7 @@
         android:layout_gravity="center"
         android:padding="10dp"
         android:textColor="@color/themeColor"
-        android:text="@string/skip"/>
+        android:text="@string/skip"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 </LinearLayout>
