--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
@@ -122,7 +122,7 @@
             android:textSize="18sp"
             android:textColor="@color/text_color"
             android:layout_marginStart="10dp"
-            android:text="(0% commision)"/>
+            android:text="@string/zero_commission"/>
     </LinearLayout>
     <Button
         android:id="@+id/btAccept"
@@ -146,7 +146,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:textColor="@color/text_color"
-        android:text="Offer you fare for trip"/>
+        android:text="@string/offer_you_fare_for_trip"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvBidValues"
