--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -596,6 +596,27 @@
                     android:text="@string/ringtone_full_volume"
                     android:theme="@style/ThemeSwitch"
                     />
+
+
+                <View
+                    android:id="@+id/ivDivRingtoneSelection"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/dividerColor"/>
+                <TextView
+                    android:id="@+id/tvSelectRingtone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:paddingEnd="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingTop="15dp"
+                    style="@style/TextNormal"
+                    android:text="@string/select_ringtone"
+                    android:background="?attr/selectableItemBackground"
+                    />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
