--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -235,6 +235,9 @@
                 android:layout_height="match_parent"
                 android:background="@color/white"/>
 
+            <include layout="@layout/activity_request"
+                android:visibility="gone"/>
+
         </RelativeLayout>
 
     </LinearLayout>
