--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/transparent"
     android:tag="@string/dont_touch_me"
+    android:id="@+id/containerRequestBidNew"
     android:layout_height="match_parent"
     tools:context=".RequestActivity">
 
