--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_traction_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_traction_list.xml
@@ -13,7 +13,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
