--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -9,9 +9,19 @@
     <include layout="@layout/layout_top_bar"
              android:id="@+id/layout_top_bar"
              android:layout_width="match_parent"
-             android:layout_height="50dp"
+             android:layout_height="55dp"
              app:layout_constraintTop_toTopOf="parent"
         />
+
+    <include
+        layout="@layout/layout_switch_slide"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/layout_top_bar"
+        app:layout_constraintBottom_toBottomOf="@id/layout_top_bar"
+        app:layout_constraintStart_toStartOf="@id/layout_top_bar"
+        app:layout_constraintEnd_toEndOf="@id/layout_top_bar"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/fragment"
