--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_traction_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_traction_list.xml
@@ -15,4 +15,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <TextView
+        android:id="@+id/tvNoData"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/no_data_available"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextNormal"/>
+
 </android.support.constraint.ConstraintLayout>
