--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
@@ -11,7 +11,12 @@
         android:layout_height="wrap_content"
         android:background="@color/white">
 
-        <include layout="@layout/layout_top_bar"/>
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@+id/textViewEdit"
+            layout="@layout/layout_top_bar"/>
 
         <TextView
             android:id="@+id/textViewEdit"
@@ -19,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:layout_marginStart="20px"
             android:layout_marginEnd="10px"
             android:padding="20px"
             android:text="@string/edit"
