--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ringtone_selection.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ringtone_selection.xml
@@ -26,9 +26,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvRingtones"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:layout_margin="10dp"
+        android:scrollbars="vertical"
         />
 
 
