wl_dev: rate card html text auto link enabled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -21,6 +21,7 @@
 
     </RelativeLayout>
 <android.support.v4.widget.NestedScrollView
+    android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
@@ -332,6 +333,7 @@
             android:padding="8dp"
             android:tag="@string/dont_touch_me"
             android:visibility="visible"
+            android:autoLink="all"
             />
 
 
