f_request_ringtone: ringtones decreased

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ringtone.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ringtone.xml
@@ -14,5 +14,6 @@
     tools:text="@string/ringtone1"
     android:clickable="true"
     android:focusable="true"
+    android:textSize="15sp"
     android:theme="@style/Theme.AppCompat.Light"
     />
