Earnings view in Driver Profile Screen enabled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
@@ -49,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="22px"
+                android:visibility="gone"
                 android:gravity="center"
                 android:text="@string/take_cash"
                 android:lineSpacingExtra="10px"
