--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -107,6 +107,7 @@
         android:src="@drawable/ic_ring_tone"
         android:background="@drawable/circle_white_stroke_grey_selector"
         android:padding="10dp"
+        android:visibility="gone"
         android:layout_marginEnd="12dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
