--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_orange_bottom_line.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_orange_bottom_line.xml
@@ -3,7 +3,7 @@
     <item android:top="-8dp" android:left="-8dp" android:right="-8dp">
         <shape>
             <solid android:color="#002B7996"/>
-            <stroke android:color="#e58251" android:width="3dp"/>
+            <stroke android:color="@color/themeColor" android:width="3dp"/>
         </shape>
     </item>
 </layer-list>
