destination screen added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
@@ -49,7 +49,6 @@
     <dimen name="top_bar_height">98px</dimen>
 
 
-
     <dimen name="button_width_big_new">295px</dimen>
     <dimen name="button_width_big_extra_new">305px</dimen>
     <dimen name="button_width_small">200px</dimen>
@@ -60,4 +59,5 @@
 
     <dimen name="spacing_grid_recycler_view">8dp</dimen>
     <dimen name="dp_1">1dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
