--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
@@ -3,86 +3,197 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DestinationRideActivity">
+    android:layout_height="match_parent">
 
-    <RelativeLayout android:id="@+id/topRl"
+    <RelativeLayout
+        android:id="@+id/topRl"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="62dp"
         android:background="@color/colorPrimary"
         android:splitMotionEvents="false"
         android:tag="@string/dont_touch_me"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
             android:id="@+id/backBtn"
-            style="@style/BackArrow"
-            />
+            style="@style/BackArrow" />
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/title"
+            style="@style/TextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center"
-            android:textAllCaps="true"
-            android:maxHeight="45dp"
-            style="@style/TextTitle"
-            app:autoSizeTextType="uniform"
-            android:layout_toEndOf="@+id/backBtn"
-            android:layout_marginEnd="38dp"
             android:layout_toStartOf="@id/ivAddDestRide"
-            />
+            android:layout_toEndOf="@+id/backBtn"
+            android:gravity="center"
+            android:maxHeight="45dp"
+            android:textAllCaps="true"
+            android:text="@string/dest_trip"
+            app:autoSizeTextType="uniform" />
+
         <ImageView
             android:id="@+id/ivAddDestRide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_plus_theme"
-            />
+            android:src="@drawable/ic_plus_theme" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/grey_alpha_66"
             android:layout_alignParentBottom="true"
-            />
+            android:background="@color/grey_alpha_66" />
 
 
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvSavedDest"
+    <RelativeLayout
+        android:id="@+id/relativeLayoutContainer"
         android:layout_width="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/topRl"
-        android:layout_marginTop="20dp"
-        tools:listitem="@layout/content_destination_ride"
-        tools:itemCount="4"
-        android:orientation="vertical" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topRl">
 
-    <TextView
-        android:id="@+id/tvSetDestRide"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/rvSavedDest"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
-        android:background="@color/themeColor"
-        android:gravity="center"
-        android:text="Set Destination"
-        android:textColor="@color/white"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        />
+        <LinearLayout
+            android:id="@+id/destRideEnabledView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:padding="15dp">
 
+            <LinearLayout
+                android:id="@+id/linearLayoutContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_wallet_border"
+                android:orientation="vertical"
+                android:splitMotionEvents="false">
+
+                <TextView
+                    android:id="@+id/textViewSearchName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/name"
+                    android:fontFamily="@font/maven_pro_medium"
+                    android:textSize="19sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textViewSearchAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:layout_marginTop="10dp"
+                    android:text="sadcew"
+                    android:layout_marginBottom="20dp"
+                    android:textColor="@color/text_color_light"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/background_wallet_border"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/maven_pro_medium"
+                    android:gravity="center"
+                    android:text="Time Remaining"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+
+                    />
+
+                <RelativeLayout
+                    android:id="@+id/llRideEndTotalFareTakeCash"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="30dp"
+                        android:layout_toStartOf="@id/ivDivRideEndTakeCash"
+                        android:fontFamily="@font/maven_pro_medium"
+                        android:text="Hour"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/ivDivRideEndTakeCash"
+                        android:layout_width="1dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_centerInParent="true"
+                        android:background="@color/grey_dark"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tvTimer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="30dp"
+                        android:layout_toEndOf="@id/ivDivRideEndTakeCash"
+                        android:fontFamily="@font/maven_pro_medium"
+                        android:text="05:30"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvSavedDest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/destRideEnabledView"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="5dp"
+            android:orientation="vertical"
+            tools:itemCount="4"
+            tools:listitem="@layout/content_destination_ride" />
+
+        <TextView
+            android:id="@+id/tvSetDestRide"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/rvSavedDest"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/orange_btn_selector"
+            android:gravity="center"
+            android:text="Set Destination"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 </RelativeLayout>
