--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_destination_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_destination_ride.xml
@@ -1,36 +1,39 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/GreyHighlight"
-    android:background="?attr/selectableItemBackground"
+    android:background="?attr/selectableItemBackgroundBorderless"
     app:cardElevation="5dp"
     android:padding="6dp"
-    android:layout_marginTop="10dp"
-
+    android:layout_marginTop="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginBottom="10dp"
     >
 <RelativeLayout android:id="@+id/relative"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="?attr/selectableItemBackgroundBorderless"
     android:splitMotionEvents="false"
     android:tag="mwar">
 
     <ImageView
         android:id="@+id/imageViewType"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
-        android:src="@drawable/radio_select"
+        android:src="@drawable/radio_unslelcet"
         android:tag="mwar"
         android:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/linearLayoutContent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         android:layout_toStartOf="@+id/llDeleteAdd"
         android:layout_toEndOf="@+id/imageViewType"
         android:orientation="vertical"
@@ -44,8 +47,9 @@
             android:layout_height="wrap_content"
             android:text="@string/name"
             android:textStyle="bold"
+            android:gravity="center"
             android:textColor="@color/text_color_light_selector"
-            android:textSize="15sp"/>
+            android:textSize="18sp"/>
 
         <TextView
             android:layout_weight="1"
@@ -54,8 +58,9 @@
             android:layout_height="wrap_content"
             android:text="sadcew"
             android:maxLines="1"
+            android:gravity="center"
             android:textColor="@color/text_color_light"
-            android:textSize="25px"
+            android:textSize="12sp"
             />
     </LinearLayout>
 
@@ -72,8 +77,8 @@
         <ImageView
             android:id="@+id/ivDeleteAddress"
             android:tag="mwar"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:padding="10dp"
             android:theme="@style/GreyHighlight"
             android:background="?attr/selectableItemBackgroundBorderless"
