From:- wl_oktaxi: UI fixes due to long Amharic strings in DriverEarningFragment and WalletFragment

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earnings.xml
@@ -131,7 +131,7 @@
 
                 <TextView
                     android:id="@+id/textViewWalletBalance"
-                    android:layout_width="wrap_content"
+                    android:layout_width="145dp"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/imageViewWalletBalance"
                     android:gravity="center_vertical"
