--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_wallet.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_wallet.xml
@@ -34,7 +34,7 @@
 
                     <TextView
                         android:id="@+id/wallet_view"
-                        android:layout_width="wrap_content"
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         style="@style/TextNormal"
